GRU for linear eqn of edge weight with sttl and ct_state_ttl

--- a/Phase2ParallelRunning.ipynb
+++ b/Phase2ParallelRunning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_5200\\3370251438.py:1: DtypeWarning: Columns (1,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_22772\\3370251438.py:1: DtypeWarning: Columns (1,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(r'D:\\Project Phase II\\Dataset\\phase2labelencodeddataset.csv',encoding='cp1252')\n"
      ]
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "43005"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "64380"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_5200\\4043762459.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_22772\\4043762459.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -156,7 +156,7 @@
        "321283"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,14 +875,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_5200\\3429069213.py:3: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_22772\\3429069213.py:3: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  dfDroppedforLR = dfDroppedforLR.append(df[df['Label'] == 1].sample(n=250000, random_state=40))\n"
      ]
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,12 +1189,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LSTM Dataset preprocessing"
+    "# LSTM Dataset preprocessing for sttl and ct_state_ttl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
        "2995"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,8 +1261,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,6 +1289,57 @@
     "# Flatten tuple values in the adjacency matrix\n",
     "adjacency_matrix_flat = adjacency_matrix.reshape(-1, 1)\n",
     "label_flat = label_matrix.reshape(-1, 1) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "nodes = set()\n",
+    "edges = set()\n",
+    "for i in range(len(dfsampletest)):\n",
+    "    src = str(dfsampletest['srcip'].iloc[i])+':'+str(dfsampletest['sport'].iloc[i])\n",
+    "    dst = str(dfsampletest['dstip'].iloc[i])+':'+str(dfsampletest['dsport'].iloc[i])\n",
+    "    nodes.add(src)\n",
+    "    nodes.add(dst)\n",
+    "    edges.add((src,dst))\n",
+    "\n",
+    "print(\"Nodes:\", len(nodes))\n",
+    "print(\"Testing records: \", len(edges))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "# Prepare an adjacency matrix of the nodes\n",
+    "adjacency_matrix_test = np.zeros((len(nodes), len(nodes)), dtype=float)\n",
+    "label_matrix_test = np.zeros((len(nodes), len(nodes)))\n",
+    "\n",
+    "# Add the columns srcip:sport and dstip:dsport to the adjacency matrix\n",
+    "for i in range(len(dfsampletest)):\n",
+    "    src = str(dfsampletest['srcip'].iloc[i])+':'+str(dfsampletest['sport'].iloc[i])\n",
+    "    dst = str(dfsampletest['dstip'].iloc[i])+':'+str(dfsampletest['dsport'].iloc[i])\n",
+    "    src_index = list(nodes).index(src)\n",
+    "    dst_index = list(nodes).index(dst)\n",
+    "    adjacency_matrix_test[src_index, dst_index] = 0.99996548*dfsampletest['sttl'].iloc[i] + 0.00830924*dfsampletest['ct_state_ttl'].iloc[i]\n",
+    "    label_matrix_test[src_index, dst_index] = dfsampletest['Label'].iloc[i]\n",
+    "# Flatten tuple values in the adjacency matrix\n",
+    "adjacency_matrix_test_flat = adjacency_matrix_test.reshape(-1, 1)\n",
+    "label_test_flat = label_matrix_test.reshape(-1, 1)"
    ]
   },
   {
@@ -1381,7 +1439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load the weights to create the LSTM for edge_weight = 0.99996548 * sttl + 0.00830924 * ct_state_ttlfrom stored data\n",
+    "# Load the weights to create the LSTM for edge_weight = 0.99996548 * sttl + 0.00830924 * ct_state_ttl from stored data\n",
     "\n",
     "LSTM needs some dummy data to get initialised"
    ]
@@ -1457,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1514,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1674,6 +1732,306 @@
     }
    ],
    "source": [
+    "predictions_label_0 = 1 - predictions_test\n",
+    "labels_label_0 = 1 - label_test_flat\n",
+    "\n",
+    "# Calculate AUC score for label = 0\n",
+    "auc_score_label_0 = roc_auc_score(labels_label_0, predictions_label_0)\n",
+    "\n",
+    "print(\"AUC Score for Label 0:\", auc_score_label_0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GRU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TRAINING GRU FOR 0.99996548 * sttl + 0.00830924 * ct_state_ttl (DO NOT RUN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
+      "Epoch 1/2\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "224251/224251 [==============================] - 2353s 10ms/step - loss: 5.3099e-04 - accuracy: 1.0000 - val_loss: 1.0071e-04 - val_accuracy: 1.0000\n",
+      "Epoch 2/2\n",
+      "224251/224251 [==============================] - 2772s 12ms/step - loss: 4.6858e-05 - accuracy: 1.0000 - val_loss: 4.3394e-05 - val_accuracy: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import GRU, Dense\n",
+    "\n",
+    "# Modify the call method of the GRUClassifier\n",
+    "class GRUClassifier(tf.keras.Model):\n",
+    "    def __init__(self, input_shape, hidden_units, output_units):\n",
+    "        super(GRUClassifier, self).__init__()\n",
+    "        self.gru = GRU(hidden_units, return_sequences=False)  # Set return_sequences=False since we only need the output at the last timestep\n",
+    "        self.dense = Dense(output_units, activation='sigmoid')\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        x = tf.expand_dims(inputs, axis=-1)  # Add a new dimension to represent the input features\n",
+    "        x = self.gru(x)\n",
+    "        output = self.dense(x)\n",
+    "        return output\n",
+    "\n",
+    "# Hyperparameters\n",
+    "input_shape = adjacency_matrix_flat.shape[1:]  # Assuming each tuple has 2 attributes\n",
+    "hidden_units = 16\n",
+    "output_units = 1  # Binary classification\n",
+    "\n",
+    "# Convert adjacency_matrix_flat to a TensorFlow tensor\n",
+    "adjacency_tensor = tf.convert_to_tensor(adjacency_matrix_flat, dtype=tf.float32)\n",
+    "\n",
+    "# Initialize model, optimizer, and loss function\n",
+    "model = GRUClassifier(input_shape, hidden_units, output_units)\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Training\n",
+    "history = model.fit(adjacency_tensor, label_flat, epochs=2, batch_size=32, validation_split=0.2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save_weights(\"gru_weights_sttl_ct_state_ttl_pca.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26164/26164 [==============================] - 243s 9ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = model.predict(adjacency_matrix_test_flat)\n",
+    "predictionsclass = (predictions > 0.5).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       1.00      1.00      1.00    836839\n",
+      "         1.0       0.92      1.00      0.96       386\n",
+      "\n",
+      "    accuracy                           1.00    837225\n",
+      "   macro avg       0.96      1.00      0.98    837225\n",
+      "weighted avg       1.00      1.00      1.00    837225\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Generate classification report\n",
+    "report = classification_report(label_test_flat, predictionsclass)\n",
+    "\n",
+    "print(\"Classification Report:\")\n",
+    "print(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC Score for Positive Class (Label 1): 0.9999865751285987\n",
+      "AUC Score for Label 0: 0.9999865751285988\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "auc_score = roc_auc_score(label_test_flat, predictions)\n",
+    "\n",
+    "print(\"AUC Score for Positive Class (Label 1):\", auc_score)\n",
+    "\n",
+    "predictions_label_0 = 1 - predictions\n",
+    "labels_label_0 = 1 - label_test_flat\n",
+    "\n",
+    "# Calculate AUC score for label = 0\n",
+    "auc_score_label_0 = roc_auc_score(labels_label_0, predictions_label_0)\n",
+    "\n",
+    "print(\"AUC Score for Label 0:\", auc_score_label_0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GRU FOR 0.99996548 * sttl + 0.00830924 * ct_state_ttl FROM STORED WEIGHTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import GRU, Dense\n",
+    "\n",
+    "# Modify the call method of the GRUClassifier\n",
+    "class GRUClassifier(tf.keras.Model):\n",
+    "    def __init__(self, input_shape, hidden_units, output_units):\n",
+    "        super(GRUClassifier, self).__init__()\n",
+    "        self.gru = GRU(hidden_units, return_sequences=False)  # Set return_sequences=False since we only need the output at the last timestep\n",
+    "        self.dense = Dense(output_units, activation='sigmoid')\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        x = tf.expand_dims(inputs, axis=-1)  # Add a new dimension to represent the input features\n",
+    "        x = self.gru(x)\n",
+    "        output = self.dense(x)\n",
+    "        return output\n",
+    "\n",
+    "# Hyperparameters\n",
+    "input_shape = adjacency_matrix_flat.shape[1:]  # Assuming each tuple has 2 attributes\n",
+    "hidden_units = 16\n",
+    "output_units = 1  # Binary classification\n",
+    "\n",
+    "model_test_load = GRUClassifier(input_shape, hidden_units, output_units)\n",
+    "\n",
+    "dummy_input = np.zeros((4, 4), dtype=float)\n",
+    "dummy_label = np.zeros((4, 4))\n",
+    "#Use dummy data to initialize the model\n",
+    "dummy_flat = dummy_input.reshape(-1, 1)\n",
+    "dummy_label_flat = dummy_label.reshape(-1, 1) \n",
+    "\n",
+    "model_test_load.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "history = model_test_load.fit(dummy_flat, dummy_label_flat, epochs=2, batch_size=32, validation_split=0.2)\n",
+    "\n",
+    "# Convert adjacency_matrix_flat to a TensorFlow tensor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the saved weights\n",
+    "model_test_load.load_weights(\"gru_weights_sttl_ct_state_ttl_pca.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26164/26164 [==============================] - 227s 8ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions_test = model_test_load.predict(adjacency_matrix_test_flat)\n",
+    "predictionsclass_test = (predictions_test > 0.5).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       1.00      1.00      1.00    836839\n",
+      "         1.0       0.92      1.00      0.96       386\n",
+      "\n",
+      "    accuracy                           1.00    837225\n",
+      "   macro avg       0.96      1.00      0.98    837225\n",
+      "weighted avg       1.00      1.00      1.00    837225\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Generate classification report\n",
+    "report = classification_report(label_test_flat, predictionsclass_test)\n",
+    "\n",
+    "print(\"Classification Report:\")\n",
+    "print(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC Score for Positive Class (Label 1): 0.9999865751285987\n",
+      "AUC Score for Label 0: 0.9999865751285988\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "auc_score = roc_auc_score(label_test_flat, predictions_test)\n",
+    "\n",
+    "print(\"AUC Score for Positive Class (Label 1):\", auc_score)\n",
+    "\n",
     "predictions_label_0 = 1 - predictions_test\n",
     "labels_label_0 = 1 - label_test_flat\n",
     "\n",
