--- a/Phase2ParallelRunning.ipynb
+++ b/Phase2ParallelRunning.ipynb
@@ -75,6 +75,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 31  60 254  62  63   0   1  64 255 252  29  32  30]\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Find unique sttl values\n",
+    "print(df['sttl'].unique())\n",
+    "print(len((df['sttl'].unique())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 3 2 6 4 5]\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Find unique ct_state_ttl values\n",
+    "print(df['ct_state_ttl'].unique())\n",
+    "print(len(df['ct_state_ttl'].unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "13*7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfortunately, only 91 unique values are present in the dataset. Proper training/ testing cannot be performed. More features are definitely needed."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1186,6 +1253,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfsampleedge = "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1341,6 +1417,13 @@
     "adjacency_matrix_test_flat = adjacency_matrix_test.reshape(-1, 1)\n",
     "label_test_flat = label_matrix_test.reshape(-1, 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
