fixed 10minutetimeframe analytics

--- a/10timeframe.ipynb
+++ b/10timeframe.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Timeframe 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -9,16 +16,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_12512\\2160805178.py:2: DtypeWarning: Columns (1,3,46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(\"D:\\G95-Dataset\\phase2cleaneddataset.csv\",encoding='cp1252')\n"
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_15288\\321946155.py:2: DtypeWarning: Columns (1,3,38,46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(\"D:\\Project Phase II\\Dataset\\cleaneddataset.csv\",encoding='cp1252')\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"D:\\G95-Dataset\\phase2cleaneddataset.csv\",encoding='cp1252')\n",
+    "df = pd.read_csv(\"D:\\Project Phase II\\Dataset\\cleaneddataset.csv\",encoding='cp1252')\n",
+    "df = df.drop_duplicates()\n",
     "start_Stime = 1421927443       \n",
-    "df1 = df[(df['Stime'] >= start_Stime) & (df['Stime'] <= (start_Stime + 600))]\n",
+    "df1 = df[(df['Stime'] >= start_Stime) & (df['Ltime'] <= (start_Stime + 600))]\n",
     "\n",
     "df1_label_true = df1[df1['Label'] == 1]\n",
     "df1_label_false = df1[df1['Label'] == 0]\n",
@@ -35,7 +43,7 @@
     "    src_node = str(df1_label_true_grouped['srcip'][i]) + ':' + str(df1_label_true_grouped['sport'][i])\n",
     "    dst_node = str(df1_label_true_grouped['dstip'][i]) + ':' + str(df1_label_true_grouped['dsport'][i])\n",
     "    attackG_10_4_10_3_10_2_10_1_10_1_10_2_10_1_10_1.add_node(src_node)\n",
-    "    attackG_10_4_10_4_10_3_10_2_10_1_10_1_10_2_10_1_10_1.add_node(dst_node)\n",
+    "    attackG_10_4_10_3_10_2_10_1_10_1_10_2_10_1_10_1.add_node(dst_node)\n",
     "\n",
     "# Add edges to the graph with edge weight as count\n",
     "for i in range(len(df1_label_true_grouped)):\n",
@@ -61,6 +69,7 @@
     "    src_node = str(df1_label_false_grouped['srcip'][i]) + ':' + str(df1_label_false_grouped['sport'][i])\n",
     "    dst_node = str(df1_label_false_grouped['dstip'][i]) + ':' + str(df1_label_false_grouped['dsport'][i])\n",
     "    edge_weight = df1_label_false_grouped['count'][i]\n",
+    "    nonattackG_10_4_10_3_10_2_10_1_10_1_10_2_10_1_10_1.add_edge(src_node, dst_node, weight=edge_weight)\n",
     "\n",
     "import networkx as nx\n",
     "# Create an empty graph\n",
@@ -87,68 +96,40 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\ProgramData\\anaconda3\\Lib\\site-packages\\networkx\\algorithms\\assortativity\\mixing.py:207: RuntimeWarning: invalid value encountered in divide\n",
-      "  a = a / a.sum()\n"
+      "Number of nodes in the attack graph:  1313\n",
+      "Number of edges in the attack graph:  1137\n",
+      "Number of nodes in the non-attack graph:  17684\n",
+      "Number of edges in the non-attack graph:  14040\n",
+      "Number of nodes in the overall graph:  18985\n",
+      "Number of edges in the overall graph:  15177\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "#print the number of nodes and edges in the graph\n",
+    "print(\"Number of nodes in the attack graph: \", attackG_10_4_10_3_10_2_10_1_10_1_10_2_10_1_10_1.number_of_nodes())\n",
+    "print(\"Number of edges in the attack graph: \", attackG_10_4_10_3_10_2_10_1_10_1_10_2_10_1_10_1.number_of_edges())\n",
+    "print(\"Number of nodes in the non-attack graph: \", nonattackG_10_4_10_3_10_2_10_1_10_1_10_2_10_1_10_1.number_of_nodes())\n",
+    "print(\"Number of edges in the non-attack graph: \", nonattackG_10_4_10_3_10_2_10_1_10_1_10_2_10_1_10_1.number_of_edges())\n",
+    "print(\"Number of nodes in the overall graph: \", overallG_10_4_10_3_10_2_10_1_10_2_10_1.number_of_nodes())\n",
+    "print(\"Number of edges in the overall graph: \", overallG_10_4_10_3_10_2_10_1_10_2_10_1.number_of_edges())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assortativity coefficient for attack graph: -0.07492264242550674\n",
-      "Assortativity coefficient for non-attack graph: nan\n",
-      "Assortativity coefficient for overall graph: 0.054382308843330424\n",
-      "Average betweenness centrality for attack graph: 0.0\n",
-      "Average betweenness centrality for non-attack graph: 0.0\n",
-      "Average betweenness centrality for overall graph: 3.122657616455456e-11\n",
-      "Average closeness centrality for attack graph: 0.008767189095057935\n",
-      "Average closeness centrality for non-attack graph: 0.0\n",
-      "Average closeness centrality for overall graph: 0.0003419674400073852\n",
-      "Average clustering coefficient for attack graph: 0.0\n",
-      "Average clustering coefficient for non-attack graph: 0.0\n",
-      "Average clustering coefficient for overall graph: 0.0\n",
-      "Average degree for attack graph: 3.191256830601093\n",
-      "Average degree for non-attack graph: 0.0\n",
-      "Average degree for overall graph: 2.7361319340329837\n",
-      "Average degree centrality for attack graph: 0.017534378190115878\n",
-      "Average degree centrality for non-attack graph: 0.0\n",
-      "Average degree centrality for overall graph: 0.0006838620180038087\n",
-      "Average eigenvector centrality for attack graph: 0.019878758713069773\n",
-      "Average eigenvector centrality for non-attack graph: 0.0003139471073054033\n",
-      "Average eigenvector centrality for overall graph: 0.0004327963037403492\n",
-      "Average in-degree for attack graph: 1.5956284153005464\n",
-      "Average in-degree for non-attack graph: 0.0\n",
-      "Average in-degree for overall graph: 1.3680659670164919\n",
-      "Average out-degree for attack graph: 1.5956284153005464\n",
-      "Average out-degree for non-attack graph: 0.0\n",
-      "Average out-degree for overall graph: 1.3680659670164919\n",
-      "Average PageRank score for attack graph: 0.005464480874316951\n",
-      "Average PageRank score for non-attack graph: 0.0002608922515001599\n",
-      "Average PageRank score for overall graph: 0.0002498750624687793\n",
-      "Average shortest path length for attack graph: None\n",
-      "Average shortest path length for non-attack graph: 0\n",
-      "Average shortest path length for overall graph: None\n",
-      "Density for attack graph: 0.008767189095057948\n",
-      "Density for non-attack graph: 0\n",
-      "Density for overall graph: 0.00034193100900187245\n",
-      "Diameter for attack graph: None\n",
-      "Diameter for non-attack graph: 0\n",
-      "Diameter for overall graph: None\n",
-      "Number of Louvain communities detected in attack graph: 4\n",
-      "Number of Louvain communities detected in non-attack graph: 0\n",
-      "Number of Louvain communities detected in overall graph: 13\n",
-      "Number of strongly connected components in attack graph: 183\n",
-      "Number of strongly connected components in non-attack graph: 3833\n",
-      "Number of strongly connected components in overall graph: 4001\n",
-      "Number of weakly connected components in attack graph: 1\n",
-      "Number of weakly connected components in non-attack graph: 3833\n",
-      "Number of weakly connected components in overall graph: 4\n",
-      "Reciprocity for attack graph: 0.0\n",
-      "Reciprocity for non-attack graph: None\n",
-      "Reciprocity for overall graph: 0.00036529680365296805\n"
+      "Assortativity coefficient for attack graph: -0.024774727285235675\n",
+      "Assortativity coefficient for non-attack graph: -0.004734935299806067\n",
+      "Assortativity coefficient for overall graph: -0.0012147406034415723\n"
      ]
     }
    ],
@@ -363,13 +344,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Timeframe 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "start_Stime = 1421927444    \n",
-    "df1 = df[(df['Stime'] >= start_Stime) & (df['Stime'] <= (start_Stime + 600))]\n",
+    "df1 = df[(df['Stime'] >= start_Stime) & (df['Ltime'] <= (start_Stime + 600))]\n",
     "\n",
     "df1_label_true = df1[df1['Label'] == 1]\n",
     "df1_label_false = df1[df1['Label'] == 0]\n",
@@ -412,6 +400,7 @@
     "    src_node = str(df1_label_false_grouped['srcip'][i]) + ':' + str(df1_label_false_grouped['sport'][i])\n",
     "    dst_node = str(df1_label_false_grouped['dstip'][i]) + ':' + str(df1_label_false_grouped['dsport'][i])\n",
     "    edge_weight = df1_label_false_grouped['count'][i]\n",
+    "    nonattackG_10_4_10_3_10_2_10_1.add_edge(src_node, dst_node, weight=edge_weight)\n",
     "\n",
     "import networkx as nx\n",
     "# Create an empty graph\n",
@@ -430,6 +419,21 @@
     "    dst_node = str(df1_grouped['dstip'][i]) + ':' + str(df1_grouped['dsport'][i])\n",
     "    edge_weight = df1_grouped['count'][i]\n",
     "    overallG_10_4_10_3_10_2_10_1.add_edge(src_node, dst_node, weight=edge_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print the number of nodes and edges of the graph\n",
+    "print(\"Number of nodes in the attack graph: \", attackG_10_4_10_3_10_2_10_1.number_of_nodes())\n",
+    "print(\"Number of edges in the attack graph: \", attackG_10_4_10_3_10_2_10_1.number_of_edges())\n",
+    "print(\"Number of nodes in the non-attack graph: \", nonattackG_10_4_10_3_10_2_10_1.number_of_nodes())\n",
+    "print(\"Number of edges in the non-attack graph: \", nonattackG_10_4_10_3_10_2_10_1.number_of_edges())\n",
+    "print(\"Number of nodes in the overall graph: \", overallG_10_4_10_3_10_2_10_1.number_of_nodes())\n",
+    "print(\"Number of edges in the overall graph: \", overallG_10_4_10_3_10_2_10_1.number_of_edges())"
    ]
   },
   {
@@ -714,13 +718,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Timeframe 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "start_Stime = 1421927644       \n",
-    "df1 = df[(df['Stime'] >= start_Stime) & (df['Stime'] <= (start_Stime + 600))]\n",
+    "df1 = df[(df['Stime'] >= start_Stime) & (df['Ltime'] <= (start_Stime + 600))]\n",
     "\n",
     "df1_label_true = df1[df1['Label'] == 1]\n",
     "df1_label_false = df1[df1['Label'] == 0]\n",
@@ -763,6 +774,7 @@
     "    src_node = str(df1_label_false_grouped['srcip'][i]) + ':' + str(df1_label_false_grouped['sport'][i])\n",
     "    dst_node = str(df1_label_false_grouped['dstip'][i]) + ':' + str(df1_label_false_grouped['dsport'][i])\n",
     "    edge_weight = df1_label_false_grouped['count'][i]\n",
+    "    nonattackG_10_4_10_3.add_edge(src_node, dst_node, weight=edge_weight)\n",
     "\n",
     "import networkx as nx\n",
     "# Create an empty graph\n",
@@ -781,6 +793,21 @@
     "    dst_node = str(df1_grouped['dstip'][i]) + ':' + str(df1_grouped['dsport'][i])\n",
     "    edge_weight = df1_grouped['count'][i]\n",
     "    overallG_10_4_10_3.add_edge(src_node, dst_node, weight=edge_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print the number of nodes and edges in the graph\n",
+    "print(\"Number of nodes in the attack graph: \", attackG_10_4_10_3.number_of_nodes())\n",
+    "print(\"Number of edges in the attack graph: \", attackG_10_4_10_3.number_of_edges())\n",
+    "print(\"Number of nodes in the non-attack graph: \", nonattackG_10_4_10_3.number_of_nodes())\n",
+    "print(\"Number of edges in the non-attack graph: \", nonattackG_10_4_10_3.number_of_edges())\n",
+    "print(\"Number of nodes in the overall graph: \", overallG_10_4_10_3.number_of_nodes())\n",
+    "print(\"Number of edges in the overall graph: \", overallG_10_4_10_3.number_of_edges())\n"
    ]
   },
   {
@@ -1065,13 +1092,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Timeframe 4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "start_Stime = 1424231676      \n",
-    "df1 = df[(df['Stime'] >= start_Stime) & (df['Stime'] <= (start_Stime + 600))]\n",
+    "df1 = df[(df['Stime'] >= start_Stime) & (df['Ltime'] <= (start_Stime + 600))]\n",
     "\n",
     "df1_label_true = df1[df1['Label'] == 1]\n",
     "df1_label_false = df1[df1['Label'] == 0]\n",
@@ -1114,6 +1148,7 @@
     "    src_node = str(df1_label_false_grouped['srcip'][i]) + ':' + str(df1_label_false_grouped['sport'][i])\n",
     "    dst_node = str(df1_label_false_grouped['dstip'][i]) + ':' + str(df1_label_false_grouped['dsport'][i])\n",
     "    edge_weight = df1_label_false_grouped['count'][i]\n",
+    "    nonattackG_10_4_10_3.add_edge(src_node, dst_node, weight=edge_weight)\n",
     "\n",
     "import networkx as nx\n",
     "# Create an empty graph\n",
@@ -1132,6 +1167,21 @@
     "    dst_node = str(df1_grouped['dstip'][i]) + ':' + str(df1_grouped['dsport'][i])\n",
     "    edge_weight = df1_grouped['count'][i]\n",
     "    overallG_10_4_10_3.add_edge(src_node, dst_node, weight=edge_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print the number of nodes and edges in the graph\n",
+    "print(\"Number of nodes in the attack graph: \", attackG_10_4_10_3.number_of_nodes())\n",
+    "print(\"Number of edges in the attack graph: \", attackG_10_4_10_3.number_of_edges())\n",
+    "print(\"Number of nodes in the non-attack graph: \", nonattackG_10_4_10_3.number_of_nodes())\n",
+    "print(\"Number of edges in the non-attack graph: \", nonattackG_10_4_10_3.number_of_edges())\n",
+    "print(\"Number of nodes in the overall graph: \", overallG_10_4_10_3.number_of_nodes())\n",
+    "print(\"Number of edges in the overall graph: \", overallG_10_4_10_3.number_of_edges())"
    ]
   },
   {
@@ -1416,13 +1466,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Timeframe 5"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "start_Stime = 1424231076   \n",
-    "df1 = df[(df['Stime'] >= start_Stime) & (df['Stime'] <= (start_Stime + 600))]\n",
+    "df1 = df[(df['Stime'] >= start_Stime) & (df['Ltime'] <= (start_Stime + 600))]\n",
     "\n",
     "df1_label_true = df1[df1['Label'] == 1]\n",
     "df1_label_false = df1[df1['Label'] == 0]\n",
@@ -1465,6 +1522,7 @@
     "    src_node = str(df1_label_false_grouped['srcip'][i]) + ':' + str(df1_label_false_grouped['sport'][i])\n",
     "    dst_node = str(df1_label_false_grouped['dstip'][i]) + ':' + str(df1_label_false_grouped['dsport'][i])\n",
     "    edge_weight = df1_label_false_grouped['count'][i]\n",
+    "    nonattackG_10_4.add_edge(src_node, dst_node, weight=edge_weight)\n",
     "\n",
     "import networkx as nx\n",
     "# Create an empty graph\n",
@@ -1483,6 +1541,21 @@
     "    dst_node = str(df1_grouped['dstip'][i]) + ':' + str(df1_grouped['dsport'][i])\n",
     "    edge_weight = df1_grouped['count'][i]\n",
     "    overallG_10_4.add_edge(src_node, dst_node, weight=edge_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print the number of nodes and edges in the graph\n",
+    "print(\"Number of nodes in the attack graph: \", attackG_10_4.number_of_nodes())\n",
+    "print(\"Number of edges in the attack graph: \", attackG_10_4.number_of_edges())\n",
+    "print(\"Number of nodes in the non-attack graph: \", nonattackG_10_4.number_of_nodes())\n",
+    "print(\"Number of edges in the non-attack graph: \", nonattackG_10_4.number_of_edges())\n",
+    "print(\"Number of nodes in the overall graph: \", overallG_10_4.number_of_nodes())\n",
+    "print(\"Number of edges in the overall graph: \", overallG_10_4.number_of_edges())"
    ]
   },
   {
@@ -1783,7 +1856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
